src/index.css
body {
  background: #16222a; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #3a6073,
    #16222a
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #3a6073,
    #16222a
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
hr {
  margin: 50px 0;
}
header {
  text-align: center;
  color: white;
}
input {
  border: 1px solid #1c2730; /* Add a default border */
  outline: none; /* Disable the default outline */
  background-color: #3f5b6d;
  padding: 6px 2px;
  color: white;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  border-radius: 4px;
  font-size: 1.2rem;
}
header h1 {
  font-family: monospace;
  text-transform: uppercase;
  font-size: 40px;
}
header p {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font: 900;
  font-size: 23px;
}
.questionContainer {
  text-align: center;
  color: white;
}
.questionContainer h1 {
  margin-bottom: 50px;
}
.questionContainer ul {
  display: flex;
  flex-direction: column;
  gap: 12px;
  align-items: center;
  margin: 0;
  padding: 0;
}
.questionContainer ul button {
  border: none;
  background-color: cadetblue;
  width: 20%;
  padding: 10px;
  border-radius: 3px;
  font-size: 20px;
  color: white;
  text-transform: uppercase;
  font-family: Georgia, "Times New Roman", Times, serif;
  cursor: pointer;
}
.questionContainer ul button:hover {
  background-color: rgb(36, 113, 115);
}
.correct {
  background-color: green !important;
  font-weight: bolder;
}
.setName {
  border: 2px solid #405c6f;
  background-color: #1c2730;
  color: white;
  font-size: 1rem;
  padding: 6px 12px;
  margin: 0 auto;
  cursor: pointer;
  border-radius: 10px;
}
.wrong {
  background-color: red !important;
  font-weight: bolder;
}
.nextBtn {
  margin: 50px 0;
}
.ResetBtn,
.nextBtn button {
  border: 2px solid #405c6f;
  background-color: #1c2730;
  color: white;
  font-size: 1.3rem;
  padding: 6px 12px;
  margin: 0 auto;
  cursor: pointer;
  border-radius: 10px;
}
.output-container {
  text-align: center;
  color: white;
}
.output-container h2 {
  font-size: 30px;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}
.output-container p {
  font-size: 23px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
@media (max-width: 680px) {
  header {
    margin: 30px 0;
  }
  header h1 {
    font-size: 30px;
  }
  input {
    padding: 3px 2px;
    width: 40%;
  }
  header p {
    font-size: 20px;
  }
  hr {
    margin: 30px 0;
  }

  .questionContainer h1 {
    font-size: 25px;
    margin-bottom: 30px;
  }
  .questionContainer ul button {
    font-size: 15px;
    width: 32%;
  }
  .setName,
  .ResetBtn,
  .nextBtn button {
    font-size: 15px;
  }
  .output-container h2 {
    font-size: 25px;
  }
  .output-container p {
    font-size: 15px;
    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  }
}
@media (max-width: 360px) {
  .questionContainer ul button {
    font-size: 12px;
    width: 40%;
  }
  input {
    padding: 2px;
  }
  .setName {
    font-size: 13px;
  }
}

